--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,7 @@
             </plugin>
         </plugins>
     </build>
-
+<scm>
+    <developerConnection>scm:git:https://github.com/zkazemy/sfg-pet-clinic.git</developerConnection>
+</scm>
 </project>
